--- a/src/components/cornerstone-app/cornerstone-app.scss
+++ b/src/components/cornerstone-app/cornerstone-app.scss
@@ -5,26 +5,34 @@
   grid-column-gap: 1rem;
 }
 
+div {
+  text-align: center;
+}
+
 .title {
   text-align: center;
   color: #E09F15;
-  background: white;
-  margin-bottom: 30px;
+  border-bottom: 25px solid black;
+  margin-bottom: 25px;
+  width: 100%;
+  font-size: 60px;
+  box-shadow: 0px 3px 3px #E09F15;
 }
 
 .more-details {
-  margin: 10px;
-  padding: 10px 14px;
+  
+  padding: 2px 30px;
   text-decoration: none;
   color: white;
   background-color: #E09F15;
-  border-radius: 50px;
   transition: 0.25s;
-  border: 2px solid #E09F15;
-
+  border-top: 3px solid black;
+  border-bottom: 3px solid black;
+  box-shadow: 0px 3px 5px grey;
+ 
   &:hover {
-    background-color: white;
-    color: #E09F15;
+    background-color: black;
+    box-shadow: 0px 0px 0px grey;
     cursor: pointer;
   }
 }
